wip - fix sweet on small screen

--- a/src/components/shuffle/shuffle.module.scss
+++ b/src/components/shuffle/shuffle.module.scss
@@ -1,7 +1,7 @@
 .component {
   .quote {
     font-size: 27px;
-    max-width: 60%;
+    max-width: 45%;
     user-select: none;
   }
 
